Fix weird text overflow in card.

--- a/Decksplain/wwwroot/sass/components/card.scss
+++ b/Decksplain/wwwroot/sass/components/card.scss
@@ -70,6 +70,10 @@
         margin-bottom: 1rem;
     }
     
+    .card-content {
+        clear: left;
+    }
+    
     p a {
         word-break: break-all;
     }
